# tmall-project

./: .pre-commit-config.yaml  README.md  main.py  manage.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: validation.yaml
.virtual_documents/: Untitled.ipynb
data/: data-description.txt
models/: classifier.pkl  etl-model.pkl
notebooks/: example.ipynb  example.py
utils/: data-utils.py
workflow/: __init__.py  core.py  data_processor.py  etl.py  feature_engineer.py  feature_selection.py  model_trainer.py  model_validator.py  train.py  validate.py
